--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# My workspace
+design/*
+static_cdn/media_root/*
+static_cdn/static_root/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
