--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,3 +5,8 @@ phonenumbers==8.12.9
 Pillow==7.2.0
 pytz==2020.1
 sqlparse==0.3.1
+
+# For herokuapp
+gunicorn==20.0.4
+whitenoise==5.1.0
+psycopg2==2.8.5
