--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,13 +1,23 @@
-
 asgiref==3.2.10
+astroid==2.4.2
+autopep8==1.5.4
+colorama==0.4.3
 Django==3.1.1
+django-crispy-forms==1.9.2
 django-phonenumber-field==5.0.0
+gunicorn==20.0.4
+isort==5.5.4
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 phonenumbers==8.12.9
 Pillow==7.2.0
-pytz==2020.1
-sqlparse==0.3.1
-
-# For herokuapp
-gunicorn==20.0.4
-whitenoise==5.1.0
 psycopg2==2.8.5
+pycodestyle==2.6.0
+pylint==2.6.0
+pytz==2020.1
+six==1.15.0
+sqlparse==0.3.1
+toml==0.10.1
+typed-ast==1.4.1
+whitenoise==5.1.0
+wrapt==1.12.1
