--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
-	"python.pythonPath": "env\\Scripts\\python.exe",
-	"editor.formatOnSave": true,
+	"python.pythonPath": "venv\\Scripts\\python.exe",
+	"editor.formatOnSave": false,
 	"python.linting.pycodestyleEnabled": false,
 	"python.linting.pylintPath": "pylint",
 	"python.linting.pylintArgs": ["--load-plugins", "pylint_django", "--errors-only"],
-	"python.linting.pylintEnabled": true
+	"python.linting.pylintEnabled": true,
+	"python.formatting.provider": "autopep8"
 }
