--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,23 +1,37 @@
 asgiref==3.2.10
 astroid==2.4.2
 autopep8==1.5.4
+certifi==2020.6.20
+chardet==3.0.4
 colorama==0.4.3
+Deprecated==1.2.10
 Django==3.1.1
 django-crispy-forms==1.9.2
+django-extensions==3.0.9
+django-model-utils==4.0.0
+django-phone-verify==2.0.0
 django-phonenumber-field==5.0.0
+djangorestframework==3.12.1
 gunicorn==20.0.4
+idna==2.10
 isort==5.5.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+nexmo==2.5.2
 phonenumbers==8.12.9
 Pillow==7.2.0
 psycopg2==2.8.5
 pycodestyle==2.6.0
+PyJWT==1.7.1
 pylint==2.6.0
+python-dotenv==0.14.0
 pytz==2020.1
+requests==2.24.0
 six==1.15.0
 sqlparse==0.3.1
 toml==0.10.1
+twilio==6.46.0
 typed-ast==1.4.1
+urllib3==1.25.11
 whitenoise==5.1.0
 wrapt==1.12.1
