--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -13,6 +13,7 @@ django-mathfilters==1.0.0
 django-model-utils==4.0.0
 django-phone-verify==2.0.0
 django-phonenumber-field==5.0.0
+django-taggit==1.3.0
 djangorestframework==3.12.1
 gunicorn==20.0.4
 idna==2.10
