--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -11,6 +11,7 @@ django-crispy-forms==1.9.2
 django-extensions==3.0.9
 django-mathfilters==1.0.0
 django-model-utils==4.0.0
+django-notifications-hq==1.6.0
 django-phone-verify==2.0.0
 django-phonenumber-field==5.0.0
 django-taggit==1.3.0
@@ -20,6 +21,7 @@ idna==2.10
 importlib-metadata==2.0.0
 isort==5.5.4
 jsonconfig-tool==1.5
+jsonfield==3.1.0
 keyring==21.4.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
@@ -38,6 +40,7 @@ pywin32-ctypes==0.2.0
 requests==2.24.0
 six==1.15.0
 sqlparse==0.3.1
+swapper==1.1.2.post1
 toml==0.10.1
 twilio==6.46.0
 typed-ast==1.4.1
